sec: address review round 4 — quality and consistency fixes
- FrmGraphicFactory: replace deprecated Class#newInstance() with
  getDeclaredConstructor().newInstance(); use typed Class<? extends
  FrmPdfGraphic> + asSubclass(); collapse three catch blocks into
  ReflectiveOperationException; add nosemgrep suppression comment
- Colour: add colourClass.trim() before startsWith validation,
  consistent with SecurityTokenManager and OscarJobUtils
- AppointmentSearchManagerImpl: remove vestigial debug log
  ("filter class null?") that was misleading and used string concat
- OscarJobUtils: fix raw Class / Class[] types to Class<?> / Class<?>[]
  in isJobTypeCurrentlyValid to eliminate unchecked-warning
- Introduce ReflectionConstants.CARLOS_PACKAGE_PREFIX (utility package)
  to centralise the shared "io.github.carlos_emr.carlos." package-prefix
  constant; update Colour, SecurityTokenManager, and OscarJobUtils to
  reference it — future package renames are now a single-file change

Co-authored-by: Michael Yingbull <yingbull@users.noreply.github.com>